LPD-64953 refactor: use the proper method to add a related object entry